gccida/c3/find_reloads
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2936:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v39; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2939:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v42; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2940:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v43; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2947:6: error: use of undeclared identifier 'v50'
rtx *v50; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2949:4: error: expected ';' after expression
rtx reloads_toplev; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2949:5: error: use of undeclared identifier 'reloads_toplev'
rtx reloads_toplev; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2954:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v57; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2962:4: error: expected ';' after expression
rtx v65; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2962:5: error: use of undeclared identifier 'v65'
rtx v65; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2972:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v75; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:2985:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v88; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3004:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v107; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3032:4: error: expected ';' after expression
rtx v135; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3032:5: error: use of undeclared identifier 'v135'
rtx v135; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3057:6: error: use of undeclared identifier 'v160'
rtx *v160; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3058:6: error: use of undeclared identifier 'v161'
rtx *v161; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3059:4: error: expected ';' after expression
rtx v162; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3059:5: error: use of undeclared identifier 'v162'
rtx v162; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/reload.c:3070:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v173; // eax 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_reloads/src/obj/reload.o] Error 1
